syntax = "proto3";

package snmpproxy.v1;

option go_package = "github.com/xtxerr/snmpproxy/internal/proto";

// ============================================================================
// Envelope - Wire format wrapper
// ============================================================================

message Envelope {
  uint64 id = 1;
  
  oneof payload {
    // Auth
    AuthRequest auth_req = 10;
    AuthResponse auth_resp = 11;
    
    // Browse (unified navigation)
    BrowseRequest browse_req = 20;
    BrowseResponse browse_resp = 21;
    
    // Target CRUD
    CreateTargetRequest create_target_req = 30;
    CreateTargetResponse create_target_resp = 31;
    UpdateTargetRequest update_target_req = 32;
    UpdateTargetResponse update_target_resp = 33;
    DeleteTargetRequest delete_target_req = 34;
    DeleteTargetResponse delete_target_resp = 35;
    
    // History
    GetHistoryRequest get_history_req = 40;
    GetHistoryResponse get_history_resp = 41;
    
    // Subscriptions
    SubscribeRequest subscribe_req = 50;
    SubscribeResponse subscribe_resp = 51;
    UnsubscribeRequest unsubscribe_req = 52;
    UnsubscribeResponse unsubscribe_resp = 53;
    
    // Config
    GetConfigRequest get_config_req = 60;
    GetConfigResponse get_config_resp = 61;
    SetConfigRequest set_config_req = 62;
    SetConfigResponse set_config_resp = 63;
    
    // Push (id=0)
    Sample sample = 80;
    
    // Error
    Error error = 99;
  }
}

// ============================================================================
// Common Types
// ============================================================================

message Error {
  int32 code = 1;
  string message = 2;
}

message Sample {
  string target_id = 1;
  int64 timestamp_ms = 2;
  uint64 counter = 3;
  string text = 4;
  bool valid = 5;
  string error = 6;
  int32 poll_ms = 7;
}

// ============================================================================
// Auth
// ============================================================================

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  bool ok = 1;
  string session_id = 2;
  string message = 3;
}

// ============================================================================
// Browse - Unified Navigation
// ============================================================================

message BrowseRequest {
  string path = 1;                // "/", "/targets", "/targets/abc123", "/tags/location/dc1"
  bool long_format = 2;           // -l: include full details
  
  // Filters (apply to target listings)
  repeated string filter_tags = 10;   // AND-combined
  string filter_state = 11;           // "polling", "unreachable", "error"
  string filter_protocol = 12;        // "snmp", "http", "icmp"
  string filter_host = 13;            // Glob pattern: "192.168.*"
  
  // Pagination
  int32 limit = 20;                   // Default 100, 0 = all (use with caution)
  string cursor = 21;                 // Last ID from previous page
}

message BrowseResponse {
  string path = 1;
  repeated BrowseNode nodes = 2;
  
  // Pagination
  int32 total_count = 10;             // Total matching (if known, -1 if unknown)
  string next_cursor = 11;            // Empty if last page
  bool has_more = 12;
}

message BrowseNode {
  string name = 1;
  NodeType type = 2;
  string description = 3;             // Short description for listings
  
  // Directory info
  int32 child_count = 10;             // Number of children (targets + subdirs)
  int32 target_count = 11;            // Number of targets (direct + nested)
  
  // Target info (when type=NODE_TARGET and long_format or direct access)
  Target target = 20;
  
  // Info node (key-value pairs)
  map<string, string> info = 30;
}

enum NodeType {
  NODE_UNKNOWN = 0;
  NODE_DIRECTORY = 1;
  NODE_TARGET = 2;
  NODE_INFO = 3;
}

// ============================================================================
// Target
// ============================================================================

message Target {
  // Identity
  string id = 1;                       // UUID, auto-generated, immutable
  string name = 2;                     // User-defined, optional, mutable
  string description = 3;
  repeated string tags = 4;
  bool persistent = 5;
  string protocol = 6;                 // "snmp", "http", "icmp"
  
  // Polling config
  uint32 interval_ms = 10;
  uint32 buffer_size = 11;
  
  // Runtime state
  string state = 20;                   // "polling", "unreachable", "error"
  int64 last_poll_ms = 21;
  string last_error = 22;
  int32 error_count = 23;
  int32 samples_buffered = 24;
  
  // Ownership
  int32 owner_count = 30;
  int32 subscriber_count = 31;
  repeated string owners = 32;         // Session IDs (in long_format)
  repeated string subscribers = 33;    // Session IDs (in long_format)
  
  // Statistics
  int64 created_at_ms = 40;
  int64 polls_total = 41;
  int64 polls_success = 42;
  int64 polls_failed = 43;
  int32 avg_poll_ms = 44;
  int32 min_poll_ms = 45;
  int32 max_poll_ms = 46;
  
  // Protocol config (in long_format or /config sub-path)
  oneof protocol_config {
    SNMPTargetConfig snmp = 50;
    // Future: HTTPTargetConfig http = 51;
    // Future: ICMPTargetConfig icmp = 52;
  }
}

// ============================================================================
// SNMP Configuration
// ============================================================================

message SNMPTargetConfig {
  string host = 1;
  uint32 port = 2;                    // Default 161
  string oid = 3;
  uint32 timeout_ms = 4;
  uint32 retries = 5;
  
  oneof version {
    SNMPv2cConfig v2c = 10;
    SNMPv3Config v3 = 11;
  }
}

message SNMPv2cConfig {
  string community = 1;               // Masked in output: "pub***"
}

message SNMPv3Config {
  string security_name = 1;
  string security_level = 2;          // "noAuthNoPriv", "authNoPriv", "authPriv"
  string auth_protocol = 3;           // "MD5", "SHA", "SHA256", etc.
  string auth_password = 4;           // Masked: "****"
  string priv_protocol = 5;           // "DES", "AES", "AES256", etc.
  string priv_password = 6;           // Masked: "****"
  string context_name = 7;
}

// ============================================================================
// Target CRUD
// ============================================================================

message CreateTargetRequest {
  string id = 1;                       // Optional, auto-generated if empty
  string name = 2;                     // Optional, user-friendly name
  string description = 3;
  repeated string tags = 4;
  bool persistent = 5;
  uint32 interval_ms = 6;
  uint32 buffer_size = 7;
  
  oneof protocol {
    SNMPTargetConfig snmp = 20;
    // Future: HTTPTargetConfig http = 21;
  }
}

message CreateTargetResponse {
  bool ok = 1;
  string target_id = 2;
  string target_name = 3;              // Echo back name (or generated)
  bool created = 4;                    // false = joined existing
  string message = 5;
}

message UpdateTargetRequest {
  string target_id = 1;                // Can be ID or name
  
  // Fields to update (null/0 = don't change)
  optional string name = 2;
  optional string description = 3;
  optional uint32 interval_ms = 4;
  optional uint32 buffer_size = 5;
  optional bool persistent = 6;
  
  // Tag operations
  repeated string add_tags = 10;
  repeated string remove_tags = 11;
  repeated string set_tags = 12;       // Replaces all if non-empty
  
  // SNMP config updates
  optional uint32 timeout_ms = 20;
  optional uint32 retries = 21;
  optional string community = 22;      // SNMPv2c community
  // SNMPv3 credentials
  optional string security_name = 30;
  optional string security_level = 31;
  optional string auth_protocol = 32;
  optional string auth_password = 33;
  optional string priv_protocol = 34;
  optional string priv_password = 35;
}

message UpdateTargetResponse {
  bool ok = 1;
  Target target = 2;
  string message = 3;
}

message DeleteTargetRequest {
  string target_id = 1;
  bool force = 2;                     // Delete even if persistent
}

message DeleteTargetResponse {
  bool ok = 1;
  string message = 2;
}

// ============================================================================
// History
// ============================================================================

message GetHistoryRequest {
  string target_id = 1;
  uint32 last_n = 2;                  // Default 100
}

message GetHistoryResponse {
  string target_id = 1;
  repeated Sample samples = 2;
  int32 total_buffered = 3;           // Total samples in buffer
}

// ============================================================================
// Subscriptions
// ============================================================================

message SubscribeRequest {
  repeated string target_ids = 1;
  repeated string tags = 2;           // Subscribe to all matching tags
}

message SubscribeResponse {
  bool ok = 1;
  repeated string subscribed = 2;     // Actually subscribed target IDs
  int32 total_subscribed = 3;         // Total subscription count after
}

message UnsubscribeRequest {
  repeated string target_ids = 1;     // Empty = unsubscribe all
}

message UnsubscribeResponse {
  bool ok = 1;
  repeated string unsubscribed = 2;
  int32 total_subscribed = 3;         // Remaining subscription count
}

// ============================================================================
// Config
// ============================================================================

message GetConfigRequest {}

message GetConfigResponse {
  RuntimeConfig config = 1;
}

message SetConfigRequest {
  optional uint32 default_timeout_ms = 1;
  optional uint32 default_retries = 2;
  optional uint32 default_buffer_size = 3;
  optional uint32 min_interval_ms = 4;
}

message SetConfigResponse {
  bool ok = 1;
  RuntimeConfig config = 2;
  string message = 3;
}

message RuntimeConfig {
  // SNMP defaults (changeable)
  uint32 default_timeout_ms = 1;
  uint32 default_retries = 2;
  uint32 default_buffer_size = 3;
  
  // Limits (changeable)
  uint32 min_interval_ms = 4;
  uint32 max_targets = 5;              // 0 = unlimited
  uint32 max_subscriptions_per_session = 6;
  
  // Poller (read-only, set at startup)
  int32 poller_workers = 10;
  int32 poller_queue_size = 11;
  
  // Session (read-only)
  uint32 auth_timeout_sec = 15;
  uint32 reconnect_window_sec = 16;
  
  // TLS (read-only)
  bool tls_enabled = 20;
  string tls_cert_file = 21;           // Path only, not contents
  
  // Network (read-only)
  string listen_address = 25;
  
  // Server info (read-only)
  string version = 30;
  int64 uptime_ms = 31;
  int64 started_at_ms = 32;
}
